--- a/_config.yml
+++ b/_config.yml
@@ -71,11 +71,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: fabiolobato # your GitHub user name
+github_username: fabiolobato
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: lobatofabiof# your LinkedIn user name
+linkedin_username: lobatofabiof
 telegram_username: # your Telegram user name
 scholar_userid: eXuah3YAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
@@ -156,9 +156,10 @@ disqus_shortname: al-folio # put your disqus shortname
 # External sources.
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
+
+#external_sources:
+ # - name: medium.com
+  #  rss_url: https://medium.com/@al-folio/feed
 
 # -----------------------------------------------------------------------------
 # Collections
