--- a/_config.yml
+++ b/_config.yml
@@ -80,12 +80,12 @@ telegram_username: # your Telegram user name
 scholar_userid: eXuah3YAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
-orcid_id: 0000-0002-6282-0368# your ORCID ID
+orcid_id: 0000-0002-6282-0368 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
 osf_id: # your OSF ID
-research_gate_profile: # your profile on ResearchGate
+research_gate_profile:https://www.researchgate.net/profile/Fabio-Lobato # your profile on ResearchGate
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
