Revert "Teste publicações"
This reverts commit 30f0f53af33cfe839cfd030bf1904bd4d03f048c.

--- a/_config.yml
+++ b/_config.yml
@@ -260,8 +260,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Lobato]
-  first_name: [Fábio Manoel França]
+  last_name: [Einstein]
+  first_name: [Albert, A.]
 
   style: apa
   locale: en
