--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ orcid_id: 0000-0002-6282-0368 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-lattes_id: # your ID on Lattes (Curriculum Lattes)
+lattes_id: 8320014491229434# your ID on Lattes (Curriculum Lattes)
 osf_id: # your OSF ID
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
